# engine-cli

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  RELEASE_NOTES_v1.1.0.md  benchmark_startup.py  import_test.yaml  performance_report.md  pyproject.toml  pyrightconfig.json  pytest.ini  release_v1.0.1.sh  test.py  test_config.yaml
.github/scripts/: validate_contracts.py
.github/workflows/: ci-cd.yml  ci.yml  release.yml
agents/: agent1.json  agent2.json  agent3.json  junior-dev.yaml  senior-dev.yaml  test-agent-e2e.json  test-agent-exec.json  test-agent-integrity.json  test-agent-lifecycle.json  test-agent-workflow.json  test-agent.json  test-agent.yaml  test-consistency-agent.json  test-error-agent.json  test-integration-agent.json  test-integration-exec-agent.json  test_book_agent.json
books/: project_docs.yaml
config/: README.md  cli-config.yaml
docs/: README.md  examples.md  index.md  troubleshooting.md
k8s/: deployment.yaml
protocols/: Analysis Protocol.yaml
src/engine/: __init__.py
src/engine/cli/: __init__.py  main.py
src/engine_cli/: cache.py  config.py  formatting.py  interactive.py  main.py
src/engine_cli/commands/: advanced.py  agent.py  book.py  book_backup.py  config.py  examples.py  monitoring.py  project.py  protocol.py  team.py  tool.py  workflow.py
src/engine_cli/storage/: __init__.py  agent_book_storage.py  workflow_state_manager.py
teams/: test-basic.yaml  test-desc.yaml  test-error.yaml  test-save-simple.yaml  test-simple.yaml  test-team-debug.yaml  test-team-no-agents.yaml  test-team-no-save-debug.yaml
tests/: conftest.py  smoke_test.py
tests/contract/: __init__.py  test_core_contract.py  test_data_contracts.py
tests/coverage/: test_coverage_expansion.py  test_direct_module_coverage.py
tests/integration/: test_cli_integration.py  test_cli_usability.py  test_core_cli_integration.py  test_e2e_persistence.py  test_e2e_persistence.py.backup  test_integration_real.py
tests/performance/: test_performance_benchmarks.py
tests/unit/: test_advanced_commands.py  test_agent.py  test_agent_book_storage.py  test_book.py  test_book_backup.py  test_book_backup.py.backup  test_config_commands.py  test_examples.py  test_import.py  test_interactive.py  test_main.py  test_monitoring.py  test_project.py  test_protocol.py  test_team.py  test_tool.py  test_workflow.py  test_workflow_execution_service.py  test_workflow_state_manager.py
workflows/: complex_team_workflow.yaml  data_processing_pipeline.yaml  test-integration-workflow.yaml  test-workflow-agents.yaml  test-workflow-delete.yaml  test-workflow-e2e-0c3dkr7a.yaml  test-workflow-e2e-5l.yaml  test-workflow-e2e-6fu1twe3.yaml  test-workflow-e2e-euoorq7o.yaml  test-workflow-e2e-ncv7mk3d.yaml  test-workflow-e2e-nq04gzah.yaml  test-workflow-e2e-psurq6gq.yaml  test-workflow-e2e-x8odjkr1.yaml  test-workflow-e2e.yaml  test-workflow-exec.yaml  test_detailed.yaml  test_with_edges.yaml  test_workflow.yaml
